Major MessageHandler refactor + Formatter creation