@@ -1,13 +1,5 @@
 package xyz.earthcow.networkjoinmessages.common.util;
 
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.format.NamedTextColor;
-import net.kyori.adventure.text.minimessage.MiniMessage;
-import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
-import net.luckperms.api.LuckPerms;
-import net.luckperms.api.LuckPermsProvider;
-import net.luckperms.api.model.user.User;
-import net.william278.papiproxybridge.api.PlaceholderAPI;
 import org.jetbrains.annotations.NotNull;
 import xyz.earthcow.networkjoinmessages.common.abstraction.CoreBackendServer;
 import xyz.earthcow.networkjoinmessages.common.abstraction.CoreCommandSender;
@@ -15,145 +7,31 @@ import xyz.earthcow.networkjoinmessages.common.abstraction.CorePlayer;
 import xyz.earthcow.networkjoinmessages.common.abstraction.PremiumVanish;
 import xyz.earthcow.networkjoinmessages.common.general.Core;
 import xyz.earthcow.networkjoinmessages.common.general.Storage;
-import xyz.earthcow.networkjoinmessages.common.modules.MiniPlaceholdersHook;
 
 import java.util.*;
-import java.util.function.Consumer;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-public class MessageHandler {
+/**
+ * Singleton class handling the sending of messages to command senders
+ */
+public final class MessageHandler {
 
     private static MessageHandler instance;
-    private static Storage storage;
-    private static final MiniMessage miniMessage = MiniMessage.miniMessage();
-    private static final Pattern essentialsPattern = Pattern.compile("§x(§[0-9a-fA-F]){6}");
 
-    private LuckPerms luckPerms = null;
-    private PlaceholderAPI placeholderAPI = null;
-    private static MiniPlaceholdersHook miniPlaceholders = null;
+    private final Storage storage = Storage.getInstance();
+    private final Formatter formatter = Formatter.getInstance();
 
+    // Prevent instantiation outside of class
+    private MessageHandler() {}
+
+    /**
+     * Gets or creates the only instance of the MessageHandler class allowed to exist
+     * @return The MessageHandler instance
+     */
     public static MessageHandler getInstance() {
         if (instance == null) {
             instance = new MessageHandler();
         }
         return instance;
-    }
-
-    private static String translateLegacyCodes(String str) {
-        str = replaceEssentialsColorCodes(str);
-        return str
-            .replace('§', '&')
-            .replace("&0", convertToTag(NamedTextColor.BLACK.asHexString()))
-            .replace("&1", convertToTag(NamedTextColor.DARK_BLUE.asHexString()))
-            .replace("&2", convertToTag(NamedTextColor.DARK_GREEN.asHexString()))
-            .replace("&3", convertToTag(NamedTextColor.DARK_AQUA.asHexString()))
-            .replace("&4", convertToTag(NamedTextColor.DARK_RED.asHexString()))
-            .replace("&5", convertToTag(NamedTextColor.DARK_PURPLE.asHexString()))
-            .replace("&6", convertToTag(NamedTextColor.GOLD.asHexString()))
-            .replace("&7", convertToTag(NamedTextColor.GRAY.asHexString()))
-            .replace("&8", convertToTag(NamedTextColor.DARK_GRAY.asHexString()))
-            .replace("&9", convertToTag(NamedTextColor.BLUE.asHexString()))
-            .replace("&a", convertToTag(NamedTextColor.GREEN.asHexString()))
-            .replace("&b", convertToTag(NamedTextColor.AQUA.asHexString()))
-            .replace("&c", convertToTag(NamedTextColor.RED.asHexString()))
-            .replace("&d", convertToTag(NamedTextColor.LIGHT_PURPLE.asHexString()))
-            .replace("&e", convertToTag(NamedTextColor.YELLOW.asHexString()))
-            .replace("&f", convertToTag(NamedTextColor.WHITE.asHexString()))
-            .replace("&k", convertToTag("obfuscated"))
-            .replace("&l", convertToTag("bold"))
-            .replace("&m", convertToTag("strikethrough"))
-            .replace("&n", convertToTag("underlined"))
-            .replace("&o", convertToTag("italic"))
-            .replace("&r", convertToTag("reset"))
-            .replace("\\n", convertToTag("newline"))
-
-            // "&#FFC0CBHello! -> <#FFC0CB>Hello!
-            .replaceAll("&#([A-Fa-f0-9]{6})", "<#$1>");
-    }
-
-    private static String replaceEssentialsColorCodes(String str) {
-        // "§x§f§b§6§3§f§5Hello!" -> "&#fb63f5Hello!"
-        Matcher matcher = essentialsPattern.matcher(str);
-
-        StringBuilder result = new StringBuilder();
-
-        while (matcher.find()) {
-            String hexColor = matcher.group(0)
-                .replace("§x", "")
-                .replace("§", "");
-            matcher.appendReplacement(result, "&#" + hexColor);
-        }
-
-        matcher.appendTail(result);
-
-        return result.toString();
-    }
-
-    private static String convertToTag(String str) {
-        return "<" + str + ">";
-    }
-
-    public static Component deserialize(String str) {
-        return deserialize(str, null);
-    }
-
-    public static Component deserialize(String str, CorePlayer parseTarget) {
-        if (miniPlaceholders != null) {
-            if (parseTarget == null) {
-                return miniMessage.deserialize(translateLegacyCodes(str), miniPlaceholders.getGlobalResolver());
-            } else {
-                return miniMessage.deserialize(translateLegacyCodes(str), miniPlaceholders.getGlobalResolver(), miniPlaceholders.getAudienceResolver(parseTarget.getAudience()));
-            }
-        }
-        return miniMessage.deserialize(translateLegacyCodes(str));
-    }
-
-    public static String serialize(Component component) {
-        return miniMessage.serialize(component);
-    }
-
-    private MessageHandler() {
-        storage = Storage.getInstance();
-
-        try {
-            luckPerms = LuckPermsProvider.get();
-            log("Successfully hooked into LuckPerms!");
-        } catch (IllegalStateException | NoClassDefFoundError e) {
-            Core.getInstance().getPlugin().getCoreLogger().warn("Could not find LuckPerms. Corresponding placeholders will be unavailable.");
-        }
-
-        try {
-            placeholderAPI = PlaceholderAPI.createInstance();
-            log("Successfully hooked into PAPIProxyBridge!");
-        } catch (NoClassDefFoundError e) {
-            Core.getInstance().getPlugin().getCoreLogger().warn("Could not find PAPIProxyBridge. Corresponding placeholders will be unavailable.");
-        }
-
-        if (Core.getInstance().getPlugin().isPluginLoaded("MiniPlaceholders")) {
-            miniPlaceholders = new MiniPlaceholdersHook();
-            log("Successfully hooked into MiniPlaceholders!");
-        }
-    }
-
-    public static String sanitize(String str) {
-        return stripColor(deserialize(str));
-    }
-
-    public static String stripColor(Component component) {
-        return PlainTextComponentSerializer.plainText().serialize(component);
-    }
-
-    public void parsePlaceholdersAndThen(@NotNull String message, @NotNull CorePlayer parseTarget, Consumer<String> then) {
-        if (miniPlaceholders != null) {
-            message = serialize(deserialize(message, parseTarget));
-        }
-        if (placeholderAPI != null) {
-            placeholderAPI.formatPlaceholders(message, parseTarget.getUniqueId()).thenAccept(then);
-        } else {
-            then.accept(message);
-        }
     }
 
     /**
@@ -174,7 +52,8 @@ public class MessageHandler {
 
     /**
      * Sends a message to the specified command sender.
-     * Parses PAPI and MiniPlaceholders against the specified parse target
+     * Parses LuckPerms, PAPI, and MiniPlaceholders against the specified parse target
+     * Replaces: %player%, %displayname%, %server_name%, %server_name_clean%
      * Designed for broadcast messages.
      * @param sender The CoreCommandSender that will receive the message
      * @param message The message to be sent
@@ -182,12 +61,12 @@ public class MessageHandler {
      */
     public void sendMessage(CoreCommandSender sender, String message, CorePlayer parseTarget) {
         if (parseTarget != null) {
-            parsePlaceholdersAndThen(message, parseTarget, formatted -> {
-                sender.sendMessage(deserialize(formatted));
+            formatter.parsePlaceholdersAndThen(message, parseTarget, formatted -> {
+                sender.sendMessage(Formatter.deserialize(formatted));
             });
             return;
         }
-        sender.sendMessage(deserialize(message));
+        sender.sendMessage(Formatter.deserialize(message));
     }
 
     /**
@@ -236,59 +115,37 @@ public class MessageHandler {
     }
 
     public String getServerPlayerCount(CorePlayer player, boolean leaving) {
-        return getServerPlayerCount(
-            player.getCurrentServer(),
-            leaving,
-            player
-        );
+        return getServerPlayerCount(player.getCurrentServer(), leaving, player);
     }
 
-    public String getServerPlayerCount(
-        String serverName,
-        boolean leaving,
-        CorePlayer player
-    ) {
-        return getServerPlayerCount(
-            Core.getInstance().getPlugin().getServer(serverName),
-            leaving,
-            player
-        );
+    public String getServerPlayerCount(String serverName, boolean leaving, CorePlayer player) {
+        return getServerPlayerCount(Core.getInstance().getPlugin().getServer(serverName), leaving, player);
     }
 
-    public String getServerPlayerCount(
-        CoreBackendServer backendServer,
-        boolean leaving,
-        CorePlayer player
-    ) {
-        String serverPlayerCount = "?";
-        if (backendServer != null) {
-            List<CorePlayer> players = backendServer.getPlayersConnected();
+    public String getServerPlayerCount(@NotNull CoreBackendServer backendServer, boolean leaving, CorePlayer player) {
+        List<CorePlayer> players = backendServer.getPlayersConnected();
 
-            PremiumVanish premiumVanish = Core.getInstance().getPlugin().getVanishAPI();
+        PremiumVanish premiumVanish = Core.getInstance().getPlugin().getVanishAPI();
 
-            if (premiumVanish != null && storage.getRemoveVanishedPlayersFromPlayerCount()) {
+        if (premiumVanish != null && storage.getRemoveVanishedPlayersFromPlayerCount()) {
                 List<UUID> vanishedPlayers = premiumVanish.getInvisiblePlayers();
                 // Filter out vanished players
-                players = players.stream().filter(corePlayer -> !vanishedPlayers.contains(corePlayer.getUniqueId())).collect(Collectors.toList());
-            }
-
-            int count = players.size();
-
-            if (player != null && leaving) {
-                if (players.stream().anyMatch(corePlayer -> corePlayer.getUniqueId().equals(player.getUniqueId()))) {
-                    count--;
-                }
-            }
-
-            serverPlayerCount = count + "";
+                players = players.stream().filter(corePlayer -> !vanishedPlayers.contains(corePlayer.getUniqueId())).toList();
         }
-        return serverPlayerCount;
+
+        int count = players.size();
+
+        if (player != null && leaving) {
+            if (players.stream().anyMatch(corePlayer -> corePlayer.getUniqueId().equals(player.getUniqueId()))) {
+                count--;
+            }
+        }
+
+        return count + "";
     }
 
-    public String getNetworkPlayerCount(CorePlayer player, Boolean leaving) {
-        Collection<CorePlayer> players = Core.getInstance()
-            .getPlugin()
-            .getAllPlayers();
+    public String getNetworkPlayerCount(CorePlayer player, boolean leaving) {
+        Collection<CorePlayer> players = Core.getInstance().getPlugin().getAllPlayers();
         int count = players.size();
 
         PremiumVanish premiumVanish = Core.getInstance().getPlugin().getVanishAPI();
@@ -309,70 +166,35 @@ public class MessageHandler {
         return count + "";
     }
 
-    public String handleLpPlaceholders(String str, CorePlayer player) {
-        if (luckPerms == null) return str;
-        User lpUser = luckPerms.getUserManager().getUser(player.getUniqueId());
-        String prefix = "";
-        String suffix = "";
-        if (lpUser != null) {
-            if (lpUser.getCachedData().getMetaData().getPrefix() != null) {
-                prefix = lpUser.getCachedData().getMetaData().getPrefix();
-            }
-            if (lpUser.getCachedData().getMetaData().getSuffix() != null) {
-                suffix = lpUser.getCachedData().getMetaData().getSuffix();
-            }
-        }
-        return str
-                .replace("%player_prefix%", prefix)
-                .replace("%player_suffix%", suffix);
-    }
-
-    public String formatMessage(String msg, CorePlayer player) {
-        String serverName = storage.getServerDisplayName(player.getCurrentServer().getName());
-        return handleLpPlaceholders(msg, player)
-                .replace("%player%", player.getName())
-                .replace("%displayname%", player.getName())
-                .replace("%server_name%", serverName)
-                .replace("%server_name_clean%", sanitize(serverName));
-    }
-
     public String parseSwitchMessage(CorePlayer player, String fromName, String toName) {
         String from = storage.getServerDisplayName(fromName);
         String to = storage.getServerDisplayName(toName);
-        return formatMessage(
-                storage.getSwapServerMessage()
-                    .replace("%to%", to)
-                    .replace("%to_clean%", sanitize(to))
-                    .replace("%from%", from)
-                    .replace("%from_clean%", sanitize(from))
-                    .replace("%playercount_from%", getServerPlayerCount(fromName, true, player))
-                    .replace("%playercount_to%", getServerPlayerCount(toName, false, player))
-                    .replace("%playercount_network%", getNetworkPlayerCount(player, false))
-                , player);
+        return storage.getSwapServerMessage()
+            .replace("%to%", to)
+            .replace("%to_clean%", toName)
+            .replace("%from%", from)
+            .replace("%from_clean%", fromName)
+            .replace("%playercount_from%", getServerPlayerCount(fromName, true, player))
+            .replace("%playercount_to%", getServerPlayerCount(toName, false, player))
+            .replace("%playercount_network%", getNetworkPlayerCount(player, false));
     }
 
     public String formatFirstJoinMessage(CorePlayer player) {
-        return formatMessage(
-            storage.getFirstJoinNetworkMessage()
-                .replace("%playercount_server%", getServerPlayerCount(player, false))
-                .replace("%playercount_network%", getNetworkPlayerCount(player, false))
-            , player);
+        return formatLeaveDependentMessage(storage.getFirstJoinNetworkMessage(), player, false);
     }
 
     public String formatJoinMessage(CorePlayer player) {
-        return formatMessage(
-            storage.getJoinNetworkMessage()
-                    .replace("%playercount_server%", getServerPlayerCount(player, false))
-                    .replace("%playercount_network%", getNetworkPlayerCount(player, false))
-                , player);
+        return formatLeaveDependentMessage(storage.getJoinNetworkMessage(), player, false);
     }
 
     public String formatLeaveMessage(CorePlayer player) {
-        return formatMessage(
-            storage.getLeaveNetworkMessage()
-                        .replace("%playercount_server%", getServerPlayerCount(player, true))
-                        .replace("%playercount_network%", getNetworkPlayerCount(player, true))
-                , player);
+        return formatLeaveDependentMessage(storage.getLeaveNetworkMessage(), player, true);
+    }
+
+    private String formatLeaveDependentMessage(String message, CorePlayer player, boolean leaving) {
+        return message
+                .replace("%playercount_server%", getServerPlayerCount(player, leaving))
+                .replace("%playercount_network%", getNetworkPlayerCount(player, leaving));
     }
 
     public void log(String string) {
